# django-tenant-authx

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  conftest.py  pyproject.toml  tox.ini
.github/workflows/: ci.yml
demo/: settings.py  urls.py
demo/core/: __init__.py  api.py  api_urls.py  models.py  views.py
demo/fixtures/: demo_data.json
demo/templates/: base.html  dashboard.html  home.html  login.html
docs/: api_reference.rst  architecture.md  conf.py  index.rst  migration_guide.md
tenant_authx/: __init__.py  admin.py  apps.py  backends.py  conf.py  decorators.py  exceptions.py  handlers.py  middleware.py  models.py  permissions.py  resolvers.py  utils.py
tenant_authx/drf/: __init__.py  authentication.py  permissions.py
tenant_authx/migrations/: 0001_initial.py  __init__.py
tests/: __init__.py  security_audit.py  settings.py  settings_mysql.py  settings_postgres.py  strategies.py  test_drf.py  test_models.py  test_permissions.py  test_properties.py  urls.py
